--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 .navbar a{
     text-decoration: none;
-    color: #000;
+    color: white;
     margin-right: 24px;
     transition: .3s ease-in-out;
     padding: 10px;
@@ -47,10 +47,26 @@
     outline: none;
     border-radius: 5px;
     transition: .4s ease-in-out;
+    background-color: blue;
 
 }
 .container #btn:hover{
     background-color: black;
     color: white;
 
+}
+
+#objectlist{
+    width: 70%;
+    display: flex;
+    align-items: center;
+    grid-template-columns: auto auto auto auto;
+    flex-direction: column;
+    /* border: 1px dotted black; */
+}
+
+body{
+    background-image: url('https://as2.ftcdn.net/v2/jpg/06/39/42/05/1000_F_639420503_JqsdefTyP6fOI1cvO45g8WUHNn7QihNE.jpg');
+    color: white;
+    font-size: bold;
 }
