--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
     outline: none;
     border-radius: 5px;
     transition: .4s ease-in-out;
-    background-color: blue;
+    background-color: white;
 
 }
 .container #btn:hover{
@@ -57,6 +57,7 @@
 }
 
 #objectlist{
+    color: black;
     width: 70%;
     display: flex;
     align-items: center;
@@ -66,7 +67,13 @@
 }
 
 body{
-    background-image: url('https://as2.ftcdn.net/v2/jpg/06/39/42/05/1000_F_639420503_JqsdefTyP6fOI1cvO45g8WUHNn7QihNE.jpg');
+    background-image: url('https://w0.peakpx.com/wallpaper/671/429/HD-wallpaper-aircraft-military-sikorsky-uh-60-black-hawk-military-helicopters.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     color: white;
     font-size: bold;
+}
+#submit{
+    border: 1px dotted black;
 }
