--- a/style.css
+++ b/style.css
@@ -74,6 +74,15 @@ body{
     color: white;
     font-size: bold;
 }
-#submit{
+
+#mybtn-{helicopter.id}{
+    padding: 10px;
+    cursor: pointer;
+    background-color: transparent;
+    border: 1px solid black;
+    outline: none;
+    border-radius: 5px;
+    transition: .4s ease-in-out;
+    background-color: white;
     border: 1px dotted black;
 }
